--- a/DigitalResume/Darshan_Chavan_DigitalResume.html
+++ b/DigitalResume/Darshan_Chavan_DigitalResume.html
@@ -59,7 +59,7 @@
             </div>
             <br>
                 <!--Technical Skills -->
-                <div style="border-bottom: 3px solid powderblue;">
+                <div class="mouse" style="border-bottom: 3px solid powderblue;">
                 <h3>Technical Skills</h3> 
                 <ul>
                     <li>Html</li>
@@ -73,7 +73,7 @@
                 </div>
                 <br>
                 <!-- Personal Skills -->
-                <div style="border-bottom: 3px solid powderblue;">
+                <div class="mouse" style="border-bottom: 3px solid powderblue;">
                     <h3>Personal Skills</h3> 
                     <ul>
                         <li>Problem solving</li>
@@ -83,7 +83,7 @@
                     </div>
                     <br>
                 <!-- Hobbies -->
-                <div>
+                <div class="mouse">
                     <h3>Hobbies</h3> 
                     <ul>
                         <li>Swimming</li>
@@ -100,14 +100,14 @@
                 </div>
                 <br>
                 <!-- Career Objective -->
-                <div style="border-bottom: 3px solid powderblue;">
+                <div class="mouse" style="border-bottom: 3px solid powderblue;">
                 <h3>CAREER OBJECTIVE</h3>
                 <p>Secure a responsible career opportunity to fully utilize my training and skills, while 
                     making a significant contribution to the success of company.</p>
                 </div>
                 <br>
                 <!-- Academic Details -->
-                <div style="border-bottom: 3px solid powderblue;">
+                <div class="mouse" style="border-bottom: 3px solid powderblue;">
                     <h3>ACADEMIC DETAILS:</h3>
                     <table cellpadding = '22px' width = "100%">
                         <thead>
@@ -146,7 +146,7 @@
                     </table><br>
                 </div><br>
                     <!-- Project -->
-                    <div style="border-bottom: 3px solid powderblue;">
+                    <div class="mouse" style="border-bottom: 3px solid powderblue;">
                         <h3>PROJECT:</h3>
                         <dd><h5>School Management:</h5></dd>
                         <dl>This project is a web application and implemented for school management. It 
@@ -158,7 +158,7 @@
                             <p><strong>Github:</strong><a href="https://github.com/Darshan1605">https://github.com/Darshan1605</a></p>
                     </div><br>
                     <!-- Certifications -->
-                    <div style="border-bottom: 3px solid powderblue;">
+                    <div class="mouse" style="border-bottom: 3px solid powderblue;">
                         <h3>Certifications</h3>
                         <ul >
                             <li><a href="https://www.codecademy.com/profiles/DarshanChavan/certificates/5cadfefe5f1de806e9704577">HTML,CSS & GitHub By Codecademy</a></li>
@@ -167,7 +167,7 @@
                         </ul>
                     </div><br>
                     <!-- EXTRA CIRCULAR ACTIVITES -->
-                    <div style="border-bottom: 3px solid powderblue;">
+                    <div class="mouse" style="border-bottom: 3px solid powderblue;">
                         <h3>EXTRA CIRCULAR ACTIVITES:</h3>
                         <ul>
                             <li>Silver Medal in College Sports Event Kho-Kho</li>
